--- a/partials/channel/ChannelDeserializer.njk
+++ b/partials/channel/ChannelDeserializer.njk
@@ -2,9 +2,10 @@
 {% macro deserializer(message) %}
 
 {%- if message.payload() | messageHasNotNullPayload %}
-internal static {{message  | getMessageType}}NameSpace.{{ message | getMessageType }} JsonDeserializer(byte[] buffer)
+internal static {{message  | getMessageType}}NameSpace.{{ message | getMessageType }} JsonDeserializer(LoggingInterface logger, byte[] buffer)
 {
   var srt = Encoding.UTF8.GetString(buffer);
+  logger.Debug("Deserializing message " + srt);
   return {{message  | getMessageType}}NameSpace.{{ message | getMessageType }}.FromJson(srt);
 }
 {% endif %}
